fix(review): concurrent conflict 400, backslash charset ban, NUL text guard, issue targeting